Created a second sdwis download option

--- a/code/TX_dw_cleaning.Rmd
+++ b/code/TX_dw_cleaning.Rmd
@@ -11,7 +11,6 @@ source("~/TX-drinking-water/code/download_handlers/download_sabcrosswalk.R")
 source("~/TX-drinking-water/code/download_handlers/download_SDWIS.R")
 ```
 
-
 Grabbing data from APIs: 
 ```{r}
 # note that you may need to increase vector memory - see here: 
@@ -19,6 +18,7 @@ Grabbing data from APIs:
 # TX_sabcrosswalk <- download_sabcrosswalk(states = c("TX"))
 TX_sab <- download_sab(states = c("TX"))
 TX_cross <- download_blockcrosswalk(pwsids = unique(TX_sab$pwsid))
-TX_sdwis <- download_SDWIS(pwsids = unique(TX_sab$pwsid)[1:50], 
+# currently looking at Flouride violations (cont code = 1025)
+TX_sdwis <- download_SDWIS(pwsids = unique(TX_sab$pwsid), 
                            cont_code = "1025")
 ```
