--- a/code/TX_dw_cleaning.Rmd
+++ b/code/TX_dw_cleaning.Rmd
@@ -13,6 +13,8 @@ library(sf)
 library(aws.s3)
 library(janitor)
 library(rvest)
+library(tidycensus)
+library(areal)
 ```
 
 Sourcing downloaders: 
@@ -28,26 +30,38 @@ TX_sab <- download_sab(states = c("TX"))
 # making note the of the pwsids located in TX: 
 TX_pwsids <- unique(TX_sab$pwsid)
 
-# grabbing block crosswalks from the pwsids: 
-TX_cross <- download_blockcrosswalk(pwsids = TX_pwsids)
+# grabbing block crosswalks from the pwsids: taken out due to issues here 
+# TX_cross <- download_blockcrosswalk(pwsids = TX_pwsids)
 
 # grabbing SDWIS data - currently looking at Fluoride and Chlorine violations 
 # (1025 and 0999 respectively)
 TX_sdwis <- download_SDWIS(pwsids = TX_pwsids, 
                            cont_code = c("1025", "0999"))
 
-# census data - grabbing block stats for now 
-# TODO: change this to acs5 and block-group stats for MHI, age, etc. 
-TX_census <- tidycensus::get_decennial(
-  geography = "block", 
-  variables = c(total_pop = "P1_001N", 
-                black_alone = "P1_004N", 
-                asian_alone = "P1_006N", 
-                white_alone = "P1_003N", 
-                AIAN_alone = "P1_005N", 
-                hisp_alone = "P2_002N"), 
+# census data - grabbing block group stats for now 
+# vars_acs <- load_variables(year = 2021, "acs5")
+census_vars <- c(total_pop = "B01003_001",
+                black_alone = "B02001_003", 
+                asian_alone = "B02001_005", 
+                white_alone = "B02001_002", 
+                AIAN_alone = "B02001_004", 
+                NAPI_alone = "B02001_006", 
+                other_alone = "B02001_007", 
+                mixed_alone = "B02001_008",
+                hisp_alone = "B03003_003", 
+                mhi = "B19013_001", 
+                under_6  = "B23008_002", 
+                over_65 = "B09021_022", 
+                only_english = "B99162_002", 
+                other_lang = "B99162_003", 
+                no_school = "B15003_002", 
+                prof_degree = "B15003_024", 
+                foreign = "B99051_005")
+TX_census <- tidycensus::get_acs(
+  geography = "block group", 
+  variables = census_vars, 
   state = unique(TX_sab$state_code), 
-  year = 2020,
+  year = 2021,
   geometry = TRUE
 )
 ```
@@ -58,37 +72,52 @@ Data merging & crosswalking:
 # TODO: change this to areal interpolation methods 
 # TODO: Flag for rural or non-rural here? 
 
-# grabbing counties: 
-counties <- unlist(strsplit(TX_census$NAME, split = ","))
-TX_census$counties <- trimws(counties[seq(4, length(counties), by = 5)])
+# adding counties: 
+TX_census_tidy <- TX_census
+counties <- unlist(strsplit(TX_census_tidy$NAME, split = ","))
+TX_census_tidy$counties <- trimws(counties[grepl("County", counties)])
 
-# crosswalking TX sabs with census demographic info:
-TX_census_wide <- pivot_wider(TX_census, 
+# tidying census data and crs transformation: 
+TX_census_wide <- pivot_wider(TX_census_tidy, 
                               names_from = c("variable"), 
-                              values_from = c("value"))
-# removing extra information before the merge: 
-TX_census_wide <- subset(TX_census_wide, select = -c(NAME, geometry))
-# merging sab pws crosswalk with census stats: 
-TX_pwsid_census <- merge(as.data.frame(TX_cross), 
-                         as.data.frame(TX_census_wide), 
-                         by.x = "census_block", 
-                         by.y = "GEOID", 
-                         all = T)
-# accounting for block weights by multiplying race stats by block
-# parcel weights: 
-pwsid_weighted_census <- TX_pwsid_census %>% 
-  mutate(across(total_pop:hisp_alone, ~.*block_parcel_weight))
-# sum across pwsid and rounding to control for decimal places: 
-pwsid_census <- group_by(pwsid_weighted_census, pwsid) %>% 
-  summarize(across(total_pop:hisp_alone, ~round(sum(.), 0)))
-# calculating percentage of demographic groups: 
-pwsid_census_per <- pwsid_census %>%
-  mutate_at(vars(black_alone:hisp_alone), ~(./total_pop))
-pwsid_census_per$poc_alone <- (1 - pwsid_census_per$white_alone)
-# merging this back with sab dataset for mapping: 
-TX_pwsid_census_tidy <- merge(TX_sab, pwsid_census_per, all = T)
+                              values_from = c("estimate", "moe"))  %>%
+  st_transform(crs="ESRI:102296")
+# sab crs transformation: 
+TX_sab_tidy <- TX_sab %>%
+  st_transform(crs="ESRI:102296")
 
-## Merging SDWIS, sabs, census, and srf ######################################## 
+# sab and block group areal interpolation - note this takes quite a bit of time 
+# to run
+# TODO: brainstorm how to recalculate moe and mhi.. summing them seems incorrect. 
+# possibly need to do a separate interpolation method here? 
+census_vars <- names(TX_census_wide)
+varList <- census_vars[grepl("estimate", census_vars)]
+areal::ar_validate(source = TX_census_wide,
+                   target = TX_sab_tidy,
+                   varList = varList,
+                   method="aw",
+                   verbose=TRUE)
+sab_interpolate_bg <- aw_interpolate(TX_sab_tidy, tid="pwsid", 
+                                     source=TX_census_wide, 
+                                     sid="GEOID", weight="sum", 
+                                     output="sf", 
+                                     extensive= varList)
+# calculating percentage across census vars: 
+pwsid_census_percents <- sab_interpolate_bg %>%
+  as.data.frame(.) %>%
+  select(starts_with(c("estimate", "pwsid"))) %>%
+  select(-c("estimate_mhi")) %>%
+  mutate_at(vars(!c("estimate_total_pop", "pwsid")), ~((./estimate_total_pop)*100)) %>%
+  relocate("pwsid") %>%
+  mutate(esimate_poc_alone = (100 - pwsid_census_percents$estimate_white_alone))
+# renaming columns for merging purposes: 
+colnames(pwsid_census_percents) <- paste0(colnames(pwsid_census_percents), "_per")
+
+# merging this back into the original interpolation: 
+sab_census <- merge(sab_interpolate_bg, pwsid_census_percents, 
+      by.x = "pwsid", by.y = "pwsid_per")
+
+## Merging SDWIS, sabs, census ################################################# 
 # TODO: add some more SDWIS stats at this step (i.e, year, decade, length of 
 # violation, etc.)
 TX_census_sdwis <- merge(TX_pwsid_census_tidy, TX_sdwis, all = T)
@@ -102,6 +131,7 @@ Maps & Plots (QA/QC)
 ## QA/QC #####################################################################
 # TODO: add how many pwsids have SDWIS and census population deltas greater 
 # than X
+# TODO: this will also need to be fixed with updates as of 1/9/23
 
 # creating a diagnostic log: 
 diag_log <- data.frame(diagnostic = "") %>%
@@ -197,9 +227,8 @@ _______________________________________________________________________________
 Loading in TX data
 ```{r}
 # PPL data & tidying 
-TX_PPL <- read_csv(get_object(object = "clean_data/srf_project_priority_lists/web_ppl_combined_clean_v1-1.csv", 
-                              bucket = "water-team-data")) %>%
-  mutate(across('Project Type', 
+TX_PPL <- aws.s3::s3read_using(read.csv, object = "s3://water-team-data/clean_data/srf_project_priority_lists/web_ppl_combined_clean_v1-1.csv") %>%
+  mutate(across('Project.Type', 
                 str_replace, 'Other', 'General')) %>%
   filter(State == "Texas") %>%
   janitor::clean_names()
